# trapi_model

./: .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  README.md  chp_utils.txt  old.requirements.txt  old.setup.py  other_requirements.txt  poetry.toml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  test.py
.devcontainer/: devcontainer.json
processing_and_validation/: meta_kg_exceptions.py  meta_kg_validator.py  processing_and_validation_exceptions.py  semantic_processor.py  semantic_processor_exceptions.py
tests/: test_trapi_model.py
trapi_model/: __init__.py  base.py  constants.py  exceptions.py  knowledge_graph.py  logger.py  message.py  meta_knowledge_graph.py  query.py  query_graph.py  results.py  trapi_model  workflow.py
trapi_model/biolink/: __init__.py
trapi_model/biolink/constants/: __init__.py  debug_constants.csv
trapi_model/processing_and_validation/: meta_kg_validator.py  metakg_validation_exceptions.py  semantic_processor.py  semantic_processor_exceptions.py
trapi_model/processing_and_validation/schemas/: meta-kg.json
trapi_model/schemas/: workflow.json
utils/: build_debug_biolink_file.py
