[tool.poetry]
authors = ["Chase Yakaboski <chase.th@dartmouth.edu>"]
description = "Python Data Classes for TRAPI."
license = "Apache-2.0"
maintainers = [
  "Luke Veenhuis <luke.veenhuis@gmail.com>",
  "Greg Hyde",
  "Anthony Ragazzi <anthony.p.ragazzi.th@dartmouth.edu>",
]
name = "trapi_model"
packages = [
  {include = "trapi_model"}
]
readme = "README.md"
repository = "https://github.com/di2ag/trapi_model.git"
version = "0.1.0"

[tool.poetry.dependencies]
bmt = "^0.7.4"
deepdiff = "^5.8.1"
jsonschema = "3.2.0"
python = "^3.8"
reasoner-validator = {git = "https://github.com/di2ag/reasoner-validator.git"}

[tool.poetry.dev-dependencies]
commitizen = "2.28.0"
pre-commit = "2.19.0"
pylama = "8.3.8"
black = "22.6.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
exclude = '''  # Specify the files/dirs that should be ignored by the black formatter
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 88 # Specify the line length
target-version = ['py38'] # Specify your Python version

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
version_files = [
    "pyproject.toml:version",
    "__version__.py"
]
