[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.1"
version_files = [
    "trapi_model/__version__.py:__version__",
]
bump_message = "bump: $current_version → $new_version [skip-ci]"
changelog_file = "CHANGELOG.md"