[metadata]
name                                = trapi_model
version                             = attr: trapi_model.__version__.__version__
author                              = Chase Yakaboski
author_email                        = chase.th@dartmouth.edu
license                             = Apache-2.0
license_files                       = LICENSE
description                         = Python Data Classes for TRAPI.
long_description                    = file: README.md
long_description_content_type       = text/markdown
url                                 = https://github.com/di2ag/trapi_model

[options]
packages                            = find:
zip_safe                            = False
python_requires                     = >=3.7
install_requires                    = file: requirements.txt

[options.package_data]

trapi_model.data.biolink_schemas    =
                                    *.yaml
                                    *.yml
trapi_model.data.trapi_schemas      =
                                    *.yaml
                                    *.yml
trapi_model.biolink.constants       = 
                                    *.csv

trapi_model.schemas                 = 
                                    *.json

include_package_data                = True

[options.extras_require]
dev                                 = file: requirements-dev.txt
chp_utils                           = file: chp_utils.txt